redomino/flowsearch/browser/resources/tabs.css
#overview-wrapper h3 a{
    font-size:11px;
}

.flowsearchtabs {
    height: 20px;
    margin: 0 !important;
    padding: 0;
}

.flowsearchtabs li {
    list-style-type: none;
    margin: 0 !important;
    padding: 0;
}

.flowsearchtabs li a:before{
    content:'► ';
}
.flowsearchtabs li.current a:before{
    content:'▼ ';
}

.flowsearchtabs .current a{
    background-color: #DDDDDD;
    border-bottom: 1px solid #DDDDDD !important;
    color: #000000;
    cursor: default;
}

.flowsearchtabs a {
    box-sizing: border-box;
    -ms-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    background-color: #EFEFEF;
    border-top-left-radius: 0.5em;
    border-top-right-radius: 0.5em;
    border-bottom: 0 none !important;
    color: #777777;
    display: block;
    float: left;
    font-size: 11px;
    height: 22px;
    margin-right: 2px;
    margin-top: 3px;
    outline: 0 none;
    padding: 2px 5px;
    position: relative;
    text-decoration: none;
    top: 1px;
}

.flowsearchpanes {
    clear: both;
}

.flowsearchpanes > div {
    background-color: #DDDDDD;
    display: none;
   /* min-height: 200px;*/
    padding: 10px 10px;
}

.flowsearchpanes .field{
    margin-bottom:0;
}
#overview-wrapper{
    background-color:#DDDDDD;
    border-top-left-radius: 0.5em;
    border-top-right-radius: 0.5em;
    border-bottom-left-radius: 0.5em;
    border-bottom-right-radius: 0.5em;
    padding:10px;
    border: 2px solid #DDDDDD;
/*    margin-top:1em;*/
/*    float: left;*/
/*    clear: both;*/
/*    width: 98%;*/
    margin: 1em 0px;
}

#overview dl{
    background: #FFFFFF;
    float: left;
    margin: 4px 6px 4px 0;
    padding: 3px 6px;
    height:21px;
}
#overview dl:hover {
    cursor:pointer;
}
#overview dt,#overview dd {
    display:inline;
    margin:0;
    margin-left:3px;
}

#results {
    border-top: 2px solid #DDDDDD;

/*    margin-top:1em;*/
}

#content #reset-search{
    border-bottom:0px;
}

#searchform{
    margin-bottom: 1em;
}

